GNOME Bugzilla – Bug 754506
Cheese integration fails on 3.17.90
Last modified: 2015-09-04 08:28:18 UTC
After the port of cheese to clutter-gst-3.0 using webcam to take a photos in User accounts does not work anymore. This is building: Cheese 3.17.90 Gnome-control-center 3.17.90 The commit in cheese that broke g-c-c is: https://git.gnome.org/browse/cheese/commit/?id=9df993253d58c2442ab92df613f5754ead5b5e20
Not sure why you file a bug against gnome-control-center then... You might want to explain what "does not work anymore" means.
Sorry, for not have been clear. I think gnome 3.18 will be released with cheese 3.18 and gnome-control-center 3.18 but cheese broke ABI and API in 3.17.90 (https://git.gnome.org/browse/cheese/commit/?id=1b86b95503b84b5c2d582b43ee83753c9c8f9ba7) and this break pre-exixting gnome-control-center. Anyway I will give more information in a few days.
Then you'll need to rebuild gnome-control-center. Was there anything else?
Clicking on avatar and then "Take a snapshot.." gnome-control-center crash: (gnome-control-center:2256): GLib-GObject-CRITICAL **: g_object_new_valist: obje ct class 'CheeseCamera' has no property named 'device-node'
Created attachment 310614 [details] Stacktrace of gcc crash See attached stack trace of the crash
$ ./cheese-test-widget (lt-cheese-test-widget:26224): GLib-GObject-CRITICAL **: g_object_new_valist: object class 'CheeseCamera' has no property named 'device-node' A bug in libcheese.
Created attachment 310620 [details] [review] Tentative patch Using the patch attached makes gnome-control-center happy again.
Review of attachment 310620 [details] [review]: This fixes the crash, but I pushed an improved fix as commit b89ed15b156cdef303b8fd7593751160d1dfd4fc and commit 4b28da6cc6809986e44ab9487ba494326e43a779