Avoid crash when creating the default CheeseWidget

Update the device argument to cheese_camera_new() to reflect the new use
of GstDeviceMonitor, by renaming the device_node argument to name. Emit
a critical warning if passing a name, as creating a device by name is
not yet supported.

https://bugzilla.gnome.org/show_bug.cgi?id=754506